fix: prevent hidden text overflow in spotlight component

--- a/src/components/SpotlightAnimation/index.module.scss
+++ b/src/components/SpotlightAnimation/index.module.scss
@@ -19,6 +19,7 @@ $curve: cubic-bezier(.165, .84, .44, 1);
   -webkit-text-fill-color: transparent;
   transition: opacity 2350ms $curve;
   margin-bottom: 0;
+  line-height: 1.1;
 
   @include data-theme-selector('dark') {
     background: radial-gradient(circle at center, #DFEDF4 0%, #628699 20%, #628699 100%);
